# CoreyOS

./: .editorconfig  .gitignore  .windsurfrules  CHANGELOG.md  README.md  README.zh-CN.md  SETUP.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  progress.txt  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
src-tauri/: Cargo.toml  macos.Info.plist  tauri.conf.json
src-tauri/assets/base-soul/: README.md  SOUL.md
src-tauri/assets/corey-guards/: file-ops-guard.py
src-tauri/assets/presets/default/: MEMORY.md  SOUL.md  USER.md  manifest.yaml  mcp-servers.yaml
src-tauri/assets/presets/default/skills/: explain.md  hermes-agent-reference.md  rubber-duck.md  summarize.md  translate-zh.md  write-commit.md
src-tauri/assets/scripts/: bootstrap-macos.sh  bootstrap-windows.ps1  qr-login.py  whatsapp-qr-pair.mjs
src-tauri/assets/skill-packs/corey_starter/: manifest.yaml
src-tauri/assets/skill-packs/corey_starter/workflows/: daily-news-digest.yaml  ecommerce-promotion-approval.yaml  pdf-summary.yaml
src-tauri/assets/skill-packs/cross_border_ecom/: manifest.yaml
src-tauri/assets/skill-packs/cross_border_ecom/prompts/: soul.md
src-tauri/assets/skill-packs/cross_border_ecom/samples/: fba_inventory_2026-05-08.csv  reviews_2026-05-08.csv  sp_ad_report_2026-05-08.csv
src-tauri/assets/skill-packs/cross_border_ecom/skills/: ad_analyst.md  inventory_sentinel.md  review_monitor.md
src-tauri/assets/skill-packs/cross_border_ecom/workflows/: ad_daily_check.yaml  inventory_alert.yaml  review_alert.yaml
src-tauri/assets/skill-packs/meizheng/: README.md  REQUIREMENTS.md  manifest.yaml
src-tauri/assets/skill-packs/meizheng/config/: zone-config.yaml
src-tauri/assets/skill-packs/meizheng/scripts/: date_utils.py  download_fedex_zones.py  download_ups_zones.py  download_ups_zones_browser.py  download_usps_zones.py  scrape_boc_usd_rate.py  scrape_dhl_fuel_rate.py  scrape_ups_fuel_rate.py  update_exchange_rate_via_api.py  update_fuel_rates_via_api.py  upload_zones_meizheng.py
src-tauri/assets/skill-packs/meizheng/skills/: meizheng_os_automation.md
src-tauri/assets/skill-packs/meizheng/workflows/: refresh_ups_zones.yaml  update-fedex-zones.yaml  update-fuel-rates-monthly.yaml  update-fuel-rates-weekly.yaml  update-ups-zones.yaml  update-usps-zones.yaml
src-tauri/assets/soul/: corey_iron_rules.md
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: license_keygen.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/scripts/: browser-runner.cjs
src-tauri/src/: app_handle.rs  attachments.rs  changelog.rs  channel_status.rs  channels.rs  config.rs  db.rs  error.rs  fs_atomic.rs  hermes_config.rs  hermes_config_tests.rs  hermes_cron.rs  hermes_hooks.rs  hermes_instances.rs  hermes_logs.rs  hermes_profiles.rs  hermes_profiles_archive.rs  lib.rs  llm_profiles.rs  main.rs  menu.rs  paths.rs  pty.rs  routing_rules.rs  scheduler.rs  skills.rs  soul_md.rs  state.rs  tfidf.rs  tray.rs  wechat.rs
src-tauri/src/adapters/: conformance.rs  mod.rs
src-tauri/src/adapters/aider/: mod.rs
src-tauri/src/adapters/aider/fixtures/: models.json  sessions.json
src-tauri/src/adapters/claude_code/: mod.rs
src-tauri/src/adapters/claude_code/fixtures/: models.json  sessions.json
src-tauri/src/adapters/hermes/: gateway.rs  mod.rs  mod_tests.rs  probe.rs  text_extract.rs
src-tauri/src/adapters/hermes/fixtures/: models.json  sessions.json
src-tauri/src/adapters/hermes/gateway/: mod.rs  (+2 more)
src-tauri/src/artifacts/: mod.rs
src-tauri/src/attachments/: mod.rs  tests.rs
src-tauri/src/channels/: mod.rs  tests.rs
src-tauri/src/customer/: mod.rs
src-tauri/src/db/: analytics.rs  budgets.rs  knowledge.rs  messages.rs  migrations.rs  mod.rs  runbooks.rs  sessions.rs  skills_history.rs  workflows.rs
src-tauri/src/hermes_config/: env.rs  gateway.rs  mod.rs  tests.rs  yaml.rs
src-tauri/src/hermes_profiles/: mod.rs  tests.rs
src-tauri/src/hermes_profiles_archive/: import.rs  mod.rs
src-tauri/src/ipc/: agents.rs  artifacts.rs  attachments.rs  browser_aliases.rs  browser_cdp.rs  browser_config.rs  budgets.rs  changelog.rs  channel_status.rs  channels.rs  chat.rs  config.rs  customer.rs  db.rs  demo.rs  download.rs  embedding.rs  file_export.rs  gateway_sessions.rs  health.rs  hermes_config.rs  hermes_instances.rs  hermes_logs.rs  hermes_memory.rs  hermes_profiles.rs  knowledge.rs  learning.rs  license.rs  llm_profiles.rs  mcp.rs  memory.rs  menu.rs  mod.rs  model.rs  pack.rs  paths.rs  preset.rs  pty.rs  rag.rs  routing_rules.rs  (+16 more)
src-tauri/src/ipc/browser_cdp/: cdp_protocol.rs  chromium_bundle.rs  disabled_sentinel.rs  lifecycle.rs  profile_ops.rs
src-tauri/src/ipc/channels/: mod.rs  probe.rs
src-tauri/src/ipc/learning/: mod.rs  patterns.rs  tests.rs
src-tauri/src/ipc/pack/: config.rs  data_source.rs  install.rs  mcp_transport.rs  mod.rs
src-tauri/src/ipc/voice/: mod.rs  provider.rs  recorder.rs  tts.rs
src-tauri/src/ipc/workflow/: execution.rs  generate.rs  mod.rs
src-tauri/src/license/: mod.rs  public_key.pem
src-tauri/src/mcp_server/: guard.rs  mod.rs  tools.rs  webhook.rs
src-tauri/src/pack/: backup.rs  manifest.rs  migrations.rs  mod.rs  scanner.rs  schedules.rs  seed.rs  skills.rs  state.rs  sync.rs  templates.rs  workflows.rs
src-tauri/src/sandbox/: authority.rs  authority_tests.rs  denylist.rs  fs.rs  mod.rs  persistence.rs  types.rs
src-tauri/src/sandbox/authority/: access.rs  mod.rs
src-tauri/src/talk/: aec.rs  backend.rs  cloud.rs  download.rs  mod.rs  online_stt.rs  paths.rs  session.rs  stt.rs  tts.rs  tts_engine.rs  vad.rs
src-tauri/src/vision_proxy/: mod.rs
src-tauri/src/workflow/: browser_config.rs  context.rs  engine.rs  mod.rs  model.rs  notify.rs  planner.rs  store.rs  templates.rs
src-tauri/src/workflow/engine/: mod.rs  tests.rs
src-tauri/src/workflow/templates/: ai-comic-pipeline.yaml  code-review-pipeline.yaml  competitor-price-monitor.yaml  daily-news-digest.yaml  douyin-hot-videos.yaml  ecommerce-promotion-approval.yaml  ups-tracking.yaml
(+566 files in other folders)
