[package]
name = "caduceus"
version = "0.0.1"
description = "Corey — control plane for AI agents"
authors = ["Corey Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "caduceus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Rename the dev binary so macOS Dock shows "Corey" during `pnpm tauri:dev`.
# The package name stays `caduceus` to avoid rewriting every `use caduceus_lib::…`
# import across the codebase. This only affects the compiled binary filename
# (`target/debug/Corey`) — which the Dock process name mirrors in dev mode.
# Production builds already use `productName` from `tauri.conf.json`.
[[bin]]
name = "Corey"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native folder picker for Settings › Workspace. Wired into the sandbox
# "Add root" form so users don't hand-type `/Users/…/Projects` paths.
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "process"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
eventsource-stream = "0.2"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Bundled SQLite — no system dependency. Used for session/message persistence
# (see src/db.rs). Kept behind `parking_lot` for fast mutex and `chrono` for
# timestamp round-trips.
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"

# Windows `\\?\` verbatim-prefix stripping so canonicalized paths match
# the hard denylist (which uses human-readable `C:\...` form).
# On non-Windows targets `dunce::canonicalize` delegates straight to
# `std::fs::canonicalize`, so it's zero-cost elsewhere.
dunce = "1"

# Phase 4 · T4.5 — Web terminal. `portable-pty` provides a cross-platform
# PTY primitive; we spawn the user's login shell and relay bytes to the
# frontend via Tauri events.
portable-pty = "0.9"

# Phase 1 · T1.5 — Attachments. Frontend stages blob uploads by sending
# base64; we decode once server-side. `base64` is the canonical crate
# and is tiny. (pty.rs has a homemade encoder for a different shape —
# bytes out, not bytes in — and we leave it alone.)
base64 = "0.22"

# Phase 2 · tar.gz profile import/export (2026-04-23). `tar` writes
# POSIX archives and `flate2` adds the gzip layer. Both are pure-Rust,
# no C deps — matches the "no system libraries" stance of rusqlite
# (bundled) + rustls (no openssl).
tar = "0.4"
flate2 = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
