[package]
name = "caduceus"
version = "0.1.0"
description = "Corey — control plane for AI agents"
authors = ["Corey Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "caduceus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Rename the dev binary so macOS Dock shows "Corey" during `pnpm tauri:dev`.
# The package name stays `caduceus` to avoid rewriting every `use caduceus_lib::…`
# import across the codebase. This only affects the compiled binary filename
# (`target/debug/Corey`) — which the Dock process name mirrors in dev mode.
# Production builds already use `productName` from `tauri.conf.json`.
[[bin]]
name = "Corey"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native folder picker for Settings › Workspace. Wired into the sandbox
# "Add root" form so users don't hand-type `/Users/…/Projects` paths.
tauri-plugin-dialog = "2"
# In-app auto-update via GitHub Release manifests. Wired through
# `plugins.updater` in tauri.conf.json (endpoints + pubkey). The plugin
# is a no-op when the app was built without TAURI_SIGNING_PRIVATE_KEY
# — dev builds skip the updater path cleanly.
tauri-plugin-updater = "2"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "process"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
eventsource-stream = "0.2"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Bundled SQLite — no system dependency. Used for session/message persistence
# (see src/db.rs). Kept behind `parking_lot` for fast mutex and `chrono` for
# timestamp round-trips.
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"

# Windows `\\?\` verbatim-prefix stripping so canonicalized paths match
# the hard denylist (which uses human-readable `C:\...` form).
# On non-Windows targets `dunce::canonicalize` delegates straight to
# `std::fs::canonicalize`, so it's zero-cost elsewhere.
dunce = "1"

# Phase 4 · T4.5 — Web terminal. `portable-pty` provides a cross-platform
# PTY primitive; we spawn the user's login shell and relay bytes to the
# frontend via Tauri events.
portable-pty = "0.9"

# Phase 1 · T1.5 — Attachments. Frontend stages blob uploads by sending
# base64; we decode once server-side. `base64` is the canonical crate
# and is tiny. (pty.rs has a homemade encoder for a different shape —
# bytes out, not bytes in — and we leave it alone.)
base64 = "0.22"

# Phase 2 · tar.gz profile import/export (2026-04-23). `tar` writes
# POSIX archives and `flate2` adds the gzip layer. Both are pure-Rust,
# no C deps — matches the "no system libraries" stance of rusqlite
# (bundled) + rustls (no openssl).
tar = "0.4"
flate2 = "1"

# Scheduler (2026-04-23) — cron expression parsing and next-fire
# computation for the Scheduler page. `cron` is pure-Rust and tiny;
# we run our own tokio timer loop rather than pulling the full
# tokio-cron-scheduler crate (which adds persistence / signal infra
# we don't need since we persist to SQLite ourselves).
cron = "0.12"

[dev-dependencies]
# Scratch-dir fixtures for preset install tests (ipc::preset). Keeps
# unit tests hermetic; nothing touches a real ~/.hermes.
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
