[package]
name = "caduceus-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mint_license"
path = "src/mint_license.rs"

[[bin]]
name = "license_keygen"
path = "src/license_keygen.rs"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
